# sp-physics

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  build-all.bat  build-linux.sh  build-windows.bat  build.sh  sp-physics.vcxproj  sp-physics.vcxproj.filters
.github/ISSUE_TEMPLATE/: Bug_report.md
resources/opencl/src/: AABB.cl  BasicCommands.cl  BitonicSorting2Groups.cl  BoundingVolumeFactory.cl  CollisionResponse.cl  DOP18.cl  FindFirstNegative.cl  FindMinMax.cl  Indexes.cl  InsertionSorting.cl  Mat3.cl  OpenCLBase.cl  Plane3D.cl  Quat.cl  RadixSorting.cl  RadixSortingByGroup.cl  RadixSortingByThread.cl  Reverse.cl  SpBodyMapper.cl  SpMeshCache.cl  SpParticle.cl  SpPhysicProperties.cl  SpRigidBody.cl  SpRigidBody3D.cl  SpSoftBody.cl  SpTransformation.cl  Sphere.cl  SweepAndPrune - Copy.cl  SweepAndPrune.cl  SweepAndPruneKdop.cl  Vec3.cl
src/: AABB.cpp  AABB.h  AlgorithmAitken.cpp  AlgorithmAitken.h  AlgorithmBisection.cpp  AlgorithmBisection.h  AlgorithmFalsePosition.cpp  AlgorithmFalsePosition.h  AlgorithmFixedPoint.cpp  AlgorithmFixedPoint.h  AlgorithmHorner.cpp  AlgorithmHorner.h  AlgorithmInterpolation.cpp  AlgorithmInterpolation.h  AlgorithmLagrange.cpp  AlgorithmLagrange.h  AlgorithmNewton.cpp  AlgorithmNewton.h  AlgorithmSecant.cpp  AlgorithmSecant.h  AlgorithmSorting.cpp  AlgorithmSorting.h  AlgorithmSteffensen.cpp  AlgorithmSteffensen.h  AutoValueAutoVector.h  BinaryTree.cpp  BinaryTree.h  BinaryTreeNode.cpp  BinaryTreeNode.h  BoundingVolume.cpp  BoundingVolume.h  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  Circle2D.cpp  Circle2D.h  CollisionDetection.cpp  CollisionDetection.h  CollisionResponse.cpp  CollisionResponse.h  CollisionStatus.h  (+211 more)
test/: CMakeLists.txt  NatvisFile.natvis  build-linux.sh  sp-physics-test.vcxproj  sp-physics-test.vcxproj.filters
test/resources/opencl-src/: sumVector.cl
test/runner/: CMakeLists.txt  build-linux.sh
test/runner/src/: main.cpp
test/src/: AABBTest.cpp  AlgorithmAitkenTest.cpp  AlgorithmBisectionTest.cpp  AlgorithmFalsePositionTest.cpp  AlgorithmFixedPointTest.cpp  AlgorithmHornerTest.cpp  AlgorithmInterpolationTest.cpp  AlgorithmLagrangecpp.cpp  AlgorithmNewtonTest.cpp  AlgorithmSecantTest.cpp  AlgorithmSortingTest.cpp  AlgorithmSteffensenTest.cpp  Asserts.h  BinaryTreeNodeTest.cpp  BinaryTreeTest.cpp  BoundingVolumeHierarchyTest.cpp  Circle2DTest.cpp  CollisionDetectionTest.cpp  CollisionResponseTest.cpp  DOP18Test.cpp  GpuCommandTest.cpp  GpuCommandsTest.cpp  GpuContextTest.cpp  GpuFindFirstNegativeTest.cpp  GpuFindMinMaxTest.cpp  GpuIndexesTest.cpp  GpuInsertionSortingTest.cpp  GpuRadixSortingTest.cpp  GpuReverseTest.cpp  HashGridTest.cpp  Line2DTest.cpp  Line3DTest.cpp  Mat2Test.cpp  Mat3Test.cpp  Mat4Test.cpp  MatTest.cpp  OBBTest.cpp  OpenMLTest.cpp  ParticleSystemTest.cpp  ParticleTest.cpp  (+32 more)
